--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* Thu Jan 04 2024 Andrew Sachen <webmaster@RealityRipple.com> 1.2.3
+- Fixed Gambas 3.18 compatibility
+
 * Sat Apr 08 2023 Andrew Sachen <webmaster@RealityRipple.com> 1.2.2
 - Fixed integer overflow bug.
 
